# forge

./: forge.md
backend/forge-api/: .env  .env.example  README.md  forge.db  pyproject.toml  seed.py
backend/forge-api/app/: main.py
backend/forge-api/app/core/: config.py  deps.py  security.py
backend/forge-api/app/db/: init_db.py  session.py
backend/forge-api/app/models/: __init__.py  hackathon.py  hackathon_access.py  langflow_instance.py  score.py  team.py  user.py
backend/forge-api/app/routers/: admin.py  auth.py  hackathons.py  instances.py  scores.py  teams.py
backend/forge-api/app/schemas/: auth.py  hackathon.py  langflow_instance.py  score.py  team.py  user.py
forge/: .env.example  README.md  package-lock.json  package.json
forge/src/layouts/: Layout.astro
forge/src/lib/: adminToken.ts
forge/src/middleware/: index.ts
forge/src/pages/: index.astro  login.astro
forge/src/pages/admin/: index.astro  login.astro
forge/src/pages/admin/hackathons/: [id].astro  index.astro  new.astro
forge/src/pages/admin/instances/: index.astro  new.astro
forge/src/pages/admin/judges/: index.astro  new.astro
forge/src/pages/api/admin/: hackathons.ts
forge/src/pages/api/auth/: login.ts  logout.ts  me.ts
forge/src/pages/api/scores/: [team_id].ts
forge/src/pages/hackathons/: [id].astro  index.astro
forge/src/pages/hackathons/[id]/: leaderboard.astro
forge/src/pages/judge/: index.astro  login.astro
forge/src/pages/judge/[hackathon_id]/: [team_id].astro  index.astro  leaderboard.astro
forge/src/styles/: global.css
(+16 files in other folders)
