[project]
name = "forge-api"
version = "0.1.0"
description = "Forge hackathon platform API"
readme = "README.md"
requires-python = ">=3.13"
[project.scripts]
dev = "uvicorn app.main:app --reload"

[tool.uv]
package = false

dependencies = [
    "alembic>=1.18.4",
    "bcrypt==4.0.1",
    "cryptography>=46.0.5",
    "fastapi>=0.135.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.13.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.48",
    "uvicorn[standard]>=0.41.0",
]
